# lsd_slam

./: .gitignore
lsd_slam/: 2015.01.08_firefly_mtc_opencv.cfg  2015.01.08_firefly_mtc_opencv.yml  2015.01.08_firefly_mtc_opencv_2.cfg  2015.01.08_firefly_mtm_opencv_2.cfg  2015.01.13_stereo_firefly_mtc_right_ros.ini  CMakeLists.txt  package.xml  rviz_stereo.rviz
lsd_slam/launch/: camera.launch  camera_calibration_check.launch  camera_calibrator.launch  live_slam.launch  live_slam_viewer.launch  lsd_asl_offline.launch  lsd_tum_offline.launch  stereo_rviz.launch  stereo_view.launch  viewer.launch
lsd_slam_core/: CMakeLists.txt  package.xml
lsd_slam_core/calib/: 2014.10.10_firefly_opencv.yml  2014.10.10_firefly_ros.yml  2014.10.13_chameleon_ros.yml  2015.01.08_firefly_mtc_opencv_2.yml  2015.01.08_firefly_mtm_opencv.cfg  2015.01.08_firefly_mtm_opencv.yml  2015.01.08_firefly_mtm_opencv_2.yml  2015.01.13_stereo_firefly_mtc_left_ros.ini  2015.01.13_stereo_firefly_mtc_left_ros.yml  2015.01.13_stereo_firefly_mtc_right_ros.yml
lsd_slam_core/cfg/: LSDDebugParams.cfg  LSDParams.cfg
lsd_slam_core/launch/: bag_extractor.launch  bag_extractor2.launch  live_slam.launch  live_slam_viewer.launch  lsd_slam_kinect.launch  lsd_slam_kinect_viewer.launch  lsd_slam_perspective.perspective  stereo_calibrator.launch  stereo_camera.launch
lsd_slam_core/src/: LiveSLAMWrapper.cpp  LiveSLAMWrapper.h  SlamSystem.cpp  SlamSystem.h  main_asl_offline.cpp  main_rgbd.cpp  main_tum_offline.cpp
lsd_slam_core/src/DataStructures/: FramePoseStruct.cpp
lsd_slam_core/src/DepthEstimation/: DepthMap.cpp
lsd_slam_core/src/IOWrapper/: Output3DWrapper.h
lsd_slam_core/src/IOWrapper/ROS/: ROSOutput3DWrapper.cpp  ROSOutput3DWrapper.h
lsd_slam_core/src/dataset_utils/: CMakeLists.txt  README.md  package.xml
lsd_slam_core/src/dataset_utils/cmake/templates/: dataset_utilsConfig.cmake.in
lsd_slam_core/src/dataset_utils/python/: bag_to_images.py  bag_to_poses.py
lsd_slam_core/src/dataset_utils/python/tum_utils/: README.txt
lsd_slam_core/src/dataset_utils/src/: CMakeLists.txt  ply_to_depthmap_asl.cc
lsd_slam_core/src/dataset_utils/src/dataset_utils/: assert.h  utils.cc  utils.h
lsd_slam_core/src/dataset_utils/src/dataset_utils/asl/: dataset.h  types.h
lsd_slam_core/src/dataset_utils/test/: CMakeLists.txt  utils_test.cc
lsd_slam_core/src/dataset_utils/test/asl/: dataset_test.cc
lsd_slam_core/src/dataset_utils/test/data/MH_02/leica0/: data.csv
lsd_slam_core/src/ros_sensor_streams/: CMakeLists.txt  README.md  package.xml
lsd_slam_core/src/ros_sensor_streams/src/ros_sensor_streams/: asl_rgbd_offline_stream.cc  asl_rgbd_offline_stream.h  conversions.h  thread_safe_queue.h  tracked_image_stream.cc  tracked_image_stream.h  tracked_rgbd_stream.cc  tracked_rgbd_stream.h  tum_rgbd_offline_stream.cc  tum_rgbd_offline_stream.h
lsd_slam_core/src/stats_tracker/: CMakeLists.txt  README.md  package.xml
lsd_slam_core/src/stats_tracker/cmake/templates/: stats_trackerConfig.cmake.in
lsd_slam_core/src/stats_tracker/src/stats_tracker/: assert.h  load_tracker.h  stats_tracker.h
lsd_slam_core/src/stats_tracker/test/: load_tracker_test.cc  stats_tracker_test.cc
lsd_slam_viewer/: CMakeLists.txt  package.xml
lsd_slam_viewer/cfg/: LSDSLAMViewerParams.cfg
lsd_slam_viewer/cmake/: FindQGLViewer.cmake
lsd_slam_viewer/msg/: DepthMapStats.msg  SlamSystemStats.msg
lsd_slam_viewer/src/: KeyFrameDisplay.cpp  KeyFrameGraphDisplay.cpp  PointCloudViewer.cpp
