<package>
  <name>lsd_slam</name>
  <version>1.0.0</version>
  <description>Large-Scale Direct Monocular SLAM</description>
  <maintainer email="engelj@in.tum.de">Maintained by Jakob Engel</maintainer>

  <license>see http://vision.in.tum.de/lsdslam </license>

  <url type="website">http://vision.in.tum.de/lsdslam</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Maintained by Jakob Engel</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>lsd_slam_core</run_depend>
  <run_depend>lsd_slam_viewer</run_depend>

  <!-- Dependencies needed only for running tests. -->







</package>
